Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end. (Peter Gromov)

* GITHUB#12878: Fix the declared Exceptions of Expression#evaluate() to match those
  of DoubleValues#doubleValue(). (Uwe Schindler)

Changes in Runtime Behavior
---------------------

* GITHUB#13244, GITHUB#13264: IOContext now uses ReadAdvice#RANDOM by default for read
  operations. An implication is that `MMapDirectory` will use POSIX_MADV_RANDOM
  on POSIX systems. To fallback to OS default behaviour, pass system property via
  `-Dorg.apache.lucene.store.defaultReadAdvice=normal`. This may be useful on systems
  with lots of RAM as this increases read-ahead. (Adrien Grand, Uwe Schindler)

* GITHUB13293: Auto I/O throttling is now disabled by default on ConcurrentMergeScheduler.
  (Adrien Grand)

* GITHUB#13293: ConcurrentMergeScheduler now allows up to 50% of the threads of the host to be used
  for merging. (Adrien Grand)

* GITHUB#13277: IndexWriter treats any java.lang.Error as tragic. (Robert Muir)

Changes in Backwards Compatibility Policy
-----------------------------------------

* GITHUB#12829: IndexWriter#addDocuments or IndexWriter#updateDocuments now require a parent field name to be
  specified in IndexWriterConfig is documents blocks are indexed and index time sorting is configured. (Simon Willnauer)

* GITHUB#13230: Remove the Kp and Lovins snowball algorithms which are not supported
  or intended for general use. (Robert Muir)

* GITHUB#13602: SearchWithCollectorTask no longer supports the `collector.class` config parameter to load a custom
  collector implementation. `collector.manager.class` allows users to load a collector manager instead. (Luca Cavanna)

Other
---------------------

* GITHUB#13459: Merges all immutable attributes in FieldInfos.FieldNumbers into one Hashmap saving